@@ -1,3 +1,9 @@
+2011-02-05  Minh Dao Tran  <dao@kr.tuwien.ac.at>
+
+	* src/network/JoinThread.cpp: Get new session id from SAT.
+
+	* include/dmcs/SessionNotification.h: Add type.
+
 2011-02-05  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
 	* testsuite/testCombination.cpp: Fix or disable testcases.
